--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -17,18 +17,18 @@ jobs:
           - '0.8.4'
           - 'snapshot'
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
-          python-version: '3.6'
+          python-version: '3.10'
           architecture: 'x64'
       - uses: purcell/setup-emacs@master
         with:
           version: ${{ matrix.emacs_version }}
 
-      - uses: conao3/setup-cask@master
+      - uses: cask/setup-cask@master
         with:
-          version: 'snapshot'
+          version: ${{ matrix.cask_version }}
 
       - name: Run tests
         run: |
